# kafkax

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  kafkax.cpp  kafkax.q
examples/: CMakeLists.txt  cpp_kafka_demo.cpp  kafkax_core_demo.cpp  qipc_usage_example.cpp
include/: api.h  decoder.h
include/kafkax/: api.h  core.hpp  decoder.h  decoder_registry.hpp  event.h  version.h
include/kafkax/core/: core.hpp  decoder.h  decoder_registry.hpp
include/kafkax/qipc/: encode.hpp  reflect.hpp  types.hpp  writer.hpp
include/qipc/: qipc_c.h
plugins/default_decoder/: CMakeLists.txt  default_decoder.c
plugins/futuopen_decoder/: basicqot.hpp
qipc/: encode.hpp  reflect.hpp  types.hpp  writer.hpp
src/: core.cpp  decoder_registry.cpp  default_decoder.cpp
src/adpaters/: kafkax_q.cpp
src/adpaters/q/: kafkax_q.cpp
src/core/: core.cpp  core.hpp  decoder_registry.cpp  decoder_registry.hpp  default_decoder.cpp
src/kafkax/: core.cpp  decoder_registry.cpp  default_decoder.cpp
src/qipc/: qipc_c.cpp
